# plast

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
cmake/: FindReadline.cmake
plastd/: Daemon.cpp  Daemon.h  plastd.cpp
plasts/: CMakeLists.txt
src/: CMakeLists.txt  ClientJobMessage.h  ClientJobResponseMessage.h  Compiler.cpp  Compiler.h  CompilerArgs.cpp  CompilerCache.cpp  CompilerCache.h  CompilerMessage.cpp  CompilerMessage.h  CompilerRequestMessage.h  Console.cpp  Console.h  Daemon.cpp  Daemon.h  DaemonListMessage.h  HandshakeMessage.h  Host.h  JobAnnouncementMessage.h  JobDiscardedMessage.h  JobMessage.h  JobRequestMessage.h  JobResponseMessage.cpp  JobResponseMessage.h  MonitorMessage.h  Output.h  Plast.cpp  Plast.h  QuitMessage.h  Server.cpp  Server.h  plastc.cpp  plastd.cpp  plasts.cpp
src/common/: BuildingMessage.h  Compiler.cpp  Compiler.h  CompilerArgs.cpp  CompilerArgs.h  CompilerCache.cpp  CompilerCache.h  CompilerInvocation.cpp  CompilerInvocation.h  CompilerMessage.h  CompilerVersion.cpp  CompilerVersion.h  HasJobsMessage.h  HttpServer.cpp  HttpServer.h  JobMessage.h  JobResponseMessage.h  JsonUtils.h  LastJobMessage.h  PeerMessage.h  Plast.cpp  Plast.h  RequestJobsMessage.h  WebSocket.cpp  common.cmake
src/plastc/: CMakeLists.txt  Client.cpp  Client.h  plastc.cpp
src/plastd/: CMakeLists.txt  CompilerArgs.cpp  CompilerArgs.h  CompilerVersion.cpp  CompilerVersion.h  Daemon.cpp  Daemon.h  Http.cpp  Http.h  Job.cpp  Job.h  Local.cpp  Local.h  Preprocessor.cpp  Preprocessor.h  ProcessPool.cpp  ProcessPool.h  Remote.cpp  Remote.h  plastd.cpp
src/plasts/: CMakeLists.txt  Peer.cpp  Peer.h  Scheduler.cpp  Scheduler.h  compilers.json  plasts.cpp
src/plasts/stats/: stats.css  stats.html  stats.js  tabs.css
src/plastsh/: package.json  plastsh.js
src/plastuc/: CMakeLists.txt  plastuc.cpp
