cmake_minimum_required(VERSION 2.8)

include_directories(${CMAKE_CURRENT_LIST_DIR})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")

set(SOURCES
    plastc.cpp
    Client.cpp)

add_executable(plastc ${SOURCES})
target_link_libraries(plastc rct common)

add_custom_command(TARGET plastc POST_BUILD
  COMMAND ln -sf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plastc ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/c++
  COMMAND ln -sf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plastc ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/g++
  COMMAND ln -sf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plastc ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cc
  COMMAND ln -sf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plastc ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/gcc
  COMMAND ln -sf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plastc ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/clang
  COMMAND ln -sf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plastc ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/clang++
)

